--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
         "cross-env": "^7.0",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue-template-compiler": "^2.7.14",
+        "vue": "^2.6.12",
+        "vue-template-compiler": "^2.6.12",
         "webpack-cli": "^5.0.1"
     }
 }
